--- a/README.rdoc
+++ b/README.rdoc
@@ -7,3 +7,20 @@ Dependencies
 
 After clone repository run
   git submodule update --init
+
+Update submodules
+  git submodule foreach 'echo $path `git checkout master; git pull`'
+
+Your own VIM compilation
+* get vim source
+* edit
+* configure
+* make
+* and install it ;)
+
+  hg clone https://vim.googlecode.com/hg/ vim
+  ./configure  --enable-pythoninterp
+  make
+  sudo make install
+
+Enjoy
