--- a/README.rdoc
+++ b/README.rdoc
@@ -7,8 +7,8 @@ Dependencies
 
 * other stuff
   sudo apt-get install libncurses5-dev libgnome2-dev libgnomeui-dev \
-    libgtk2.0-dev libatk1.0-dev libbonoboui2-dev \
-    libcairo2-dev libx11-dev libxpm-dev libxt-dev
+  libgtk2.0-dev libatk1.0-dev libbonoboui2-dev \
+  libcairo2-dev libx11-dev libxpm-dev libxt-dev
 
 After clone repository run
   git submodule update --init
@@ -22,7 +22,7 @@ Your own VIM compilation
 * configure
 * make
 * and install it ;)
-
+* or compile
   hg clone https://vim.googlecode.com/hg/ vim
   ./configure --enable-pythoninterp --with-features=huge --enable-gui=gnome2 --enable-cscope
   make
@@ -30,11 +30,13 @@ Your own VIM compilation
 
 * ruby debugger
   * rvmrc
-    echo let g:ruby_debugger_debug_mode = 1 > .rvmrc
-  * debugging
-    <Leader>b - breakpoing
-    :Rdebugger
-    :Rdebugger 'rails s' || './script/rails server' (Rails 3)
-    :Rdebugger 'ruby script/server' (Rails 2.x)
+
+  echo \'let g:ruby_debugger_debug_mode = 1\' > .rvmrc
+
+* debugging
+
+  :Rdebugger
+  :Rdebugger 'rails s' || './script/rails server' (Rails 3)
+  :Rdebugger 'ruby script/server' (Rails 2.x)
 
 Enjoy!
