--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,17 @@
+
 Dependencies
 * Ruby (for the fuzzy finder plugin)
 * Exuberant Ctags (http://ctags.sourceforge.net/)
 * Ncurses-term (in Linux only)
 
-  apt-get install exuberant-ctags ncurses-term
+    apt-get install exuberant-ctags ncurses-term
+
 
 * other stuff
 
-  sudo apt-get install libncurses5-dev libgnome2-dev libgnomeui-dev \
-  libgtk2.0-dev libatk1.0-dev libbonoboui2-dev \
-  libcairo2-dev libx11-dev libxpm-dev libxt-dev
+    sudo apt-get install libncurses5-dev libgnome2-dev libgnomeui-dev \
+    libgtk2.0-dev libatk1.0-dev libbonoboui2-dev \
+    libcairo2-dev libx11-dev libxpm-dev libxt-dev
 
 After clone repository run
 
@@ -20,25 +22,18 @@ Update submodules
   git submodule foreach 'echo $path `git checkout master; git pull`'
 
 Your own VIM compilation
-* get vim source
-* edit
-* configure
-* make
 
   hg clone https://vim.googlecode.com/hg/ vim
   ./configure --enable-pythoninterp --with-features=huge --enable-gui=gnome2 --enable-cscope
   make
   sudo make install
 
-* ruby debugger
-  * rvmrc
-
-  echo \'let g:ruby_debugger_debug_mode = 1\' > .rvmrc
-
+Ruby debugger
+* rvm
+    echo \'let g:ruby_debugger_debug_mode = 1\' >> .rvmrc
 * debugging
-
-  :Rdebugger
-  :Rdebugger 'rails s' || './script/rails server' (Rails 3)
-  :Rdebugger 'ruby script/server' (Rails 2.x)
+    :Rdebugger
+    :Rdebugger 'rails s' || './script/rails server' (Rails 3)
+    :Rdebugger 'ruby script/server' (Rails 2.x)
 
 Enjoy!
