--- a/README.textile
+++ b/README.textile
@@ -3,7 +3,11 @@ h2. Dependencies for Linux
 * ctags (@exuberant-ctag@)
 * @ncurses-term@
 * other stuff
-** @libncurses5-dev libgnome2-dev libgnomeui-dev libgtk2.0-dev libatk1.0-dev libbonoboui2-dev libcairo2-dev libx11-dev libxpm-dev libxt-dev subversion mercurial git-core@
+
+bc. libncurses5-dev libgnome2-dev libgnomeui-dev libgtk2.0-dev \
+libatk1.0-dev libbonoboui2-dev libcairo2-dev libx11-dev \
+libxpm-dev libxt-dev subversion mercurial git-core
+
 * you will also need ruby and python development packages, for instance @python2.7-dev@ or @ruby1.9-dev@
 
 h2. Dependencies for Mac Os X
@@ -14,7 +18,7 @@ h2. Installation
 # Clone repository: @git clone https://github.com/bartekd/vim-configuration.git@
 # Load submodules:  @git submodule update --init@
 # Link repository directory into your local vim directory (@ln -s path_to_repository ~/.vim@)
-@ Link configuration file into your local configuration (@ln -s ~/.vim/vimrc ~/.vimrc@)
+# Link configuration file into your local configuration (@ln -s ~/.vim/vimrc ~/.vimrc@)
 
 h2. Ruby Debugger
 * rvm @echo 'let g:ruby_debugger_debug_mode = 1' >> .rvmrc@
@@ -25,7 +29,7 @@ bc. :Rdebugger
 :Rdebugger 'ruby script/server' (Rails 2.x)
 
 h2. Updates
-* submodules
-bc. git submodule foreach 'echo $path `git checkout master --force; git pull --force`'
-* plugins
+* *submodules*
+@git submodule foreach 'echo $path `git checkout master --force; git pull --force`'@
+* *plugins*
 Run @:UpdateAddons@ from your vim instance
