ctags for rubygems

--- a/README.textile
+++ b/README.textile
@@ -19,6 +19,9 @@ h2. Installation
 # Load submodules:  @git submodule update --init@
 # Link repository directory into your local vim directory (@ln -s path_to_repository ~/.vim@)
 # Link configuration file into your local configuration (@ln -s ~/.vim/vimrc ~/.vimrc@)
+# Ctags for rubygems
+** For rvm @echo 'gem-ctags >> ~/.rvm/gemsets/global.gems'@
+** or for system wide @gem install gem-ctags@
 
 h2. Ruby Debugger
 * rvm @echo 'let g:ruby_debugger_debug_mode = 1' >> .rvmrc@
