--- a/README.textile
+++ b/README.textile
@@ -31,7 +31,7 @@ h3. Configuration
 * keybinds (pure vim) @~/.vim/os/keybinds.vim@
 * plugins (with keybinds)  @~/.vim/os/plugins.vim@
 * buffers @~/.vim/os/buffers.vim@
-* colorscheme @~/.vim/colorscheme@
+* colorscheme @~/.vim/colorscheme.vim@
 
 h3. Statusline - Powerline plugin
 
